test_suite/tests/macros/ui/invalid_name.stderr
error: custom attribute panicked
 --> tests/macros/ui/invalid_name.rs:3:1
  |
3 | #[provide(name=false)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: #[provide] 'name' must be a string literal
