test_suite/tests/macros/ui/invalid_name.rs
use dilib::provide;

#[provide(name=false)]
fn get_data() -> u32 {
    0
}

fn main(){}